@@ -272,6 +272,54 @@ bool UPerceptionNeuronBPLibrary::NeuronReadMotion(APerceptionNeuronController *C
 			RotMatrix.M[2][3] = 0;
 			break;
 		}
+		case XZY:
+		{
+			RotMatrix.M[0][0] = CY*CZ;
+			RotMatrix.M[0][1] = -SZ;
+			RotMatrix.M[0][2] = CZ*SY;
+			RotMatrix.M[0][3] = 0;
+			RotMatrix.M[1][0] = SX*SY + CX*CY*SZ;
+			RotMatrix.M[1][1] = CX*CZ;
+			RotMatrix.M[1][2] = CX*SY*SZ - CY*SX;
+			RotMatrix.M[1][3] = 0;
+			RotMatrix.M[2][0] = CY*SX*SZ - CX*SY;
+			RotMatrix.M[2][1] = CZ*SX;
+			RotMatrix.M[2][2] = CX*CY + SX*SY*SZ;
+			RotMatrix.M[2][3] = 0;
+			break;
+		}
+		case YXZ:
+		{
+			RotMatrix.M[0][0] = CY*CZ + SX*SY*SZ;
+			RotMatrix.M[0][1] = CZ*SX*SY - CY*SZ;
+			RotMatrix.M[0][2] = CX*SY;
+			RotMatrix.M[0][3] = 0;
+			RotMatrix.M[1][0] = CX*SZ;
+			RotMatrix.M[1][1] = CX*CZ;
+			RotMatrix.M[1][2] = -SX;
+			RotMatrix.M[1][3] = 0;
+			RotMatrix.M[2][0] = CY*SX*SZ - CZ*SY;
+			RotMatrix.M[2][1] = CY*CZ*SX + SY*SZ;
+			RotMatrix.M[2][2] = CX*CY;
+			RotMatrix.M[2][3] = 0;
+			break;
+		}
+		case YZX:
+		{
+			RotMatrix.M[0][0] = CY*CZ;
+			RotMatrix.M[0][1] = SX*SY - CX*CY*SZ;
+			RotMatrix.M[0][2] = CX*SY + CY*SX*SZ;
+			RotMatrix.M[0][3] = 0;
+			RotMatrix.M[1][0] = SZ;
+			RotMatrix.M[1][1] = CX*CZ;
+			RotMatrix.M[1][2] = -CZ*SX;
+			RotMatrix.M[1][3] = 0;
+			RotMatrix.M[2][0] = -CZ*SY;
+			RotMatrix.M[2][1] = CY*SX + CX*SY*SZ;
+			RotMatrix.M[2][2] = CX*CY - SX*SY*SZ;
+			RotMatrix.M[2][3] = 0;
+			break;
+		}
 		case ZXY:
 		{
 			RotMatrix.M[0][0] = CY*CZ - SX*SY*SZ;
@@ -288,19 +336,19 @@ bool UPerceptionNeuronBPLibrary::NeuronReadMotion(APerceptionNeuronController *C
 			RotMatrix.M[2][3] = 0;
 			break;
 		}
-		case YXZ:
 		default:
+		case ZYX:
 		{
-			RotMatrix.M[0][0] = CY*CZ + SX*SY*SZ;
-			RotMatrix.M[0][1] = CZ*SX*SY - CY*SZ;
-			RotMatrix.M[0][2] = CX*SY;
+			RotMatrix.M[0][0] = CY*CZ;
+			RotMatrix.M[0][1] = CZ*SX*SY - CX*SZ;
+			RotMatrix.M[0][2] = CX*CZ*SY + SX*SZ;
 			RotMatrix.M[0][3] = 0;
-			RotMatrix.M[1][0] = CX*SZ;
-			RotMatrix.M[1][1] = CX*CZ;
-			RotMatrix.M[1][2] = -SX;
+			RotMatrix.M[1][0] = CY*SZ;
+			RotMatrix.M[1][1] = CX*CZ + SX*SY*SZ;
+			RotMatrix.M[1][2] = CX*SY*SZ - CZ*SX;
 			RotMatrix.M[1][3] = 0;
-			RotMatrix.M[2][0] = CY*SX*SZ - CZ*SY;
-			RotMatrix.M[2][1] = CY*CZ*SX + SY*SZ;
+			RotMatrix.M[2][0] = -SY;
+			RotMatrix.M[2][1] = CY*SX;
 			RotMatrix.M[2][2] = CX*CY;
 			RotMatrix.M[2][3] = 0;
 			break;
